# ChangeLog for kde-base/kbugbuster
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kbugbuster/ChangeLog,v 1.119 2009/10/18 17:06:12 maekke Exp $

  18 Oct 2009; Markus Meier <maekke@gentoo.org> kbugbuster-4.3.1.ebuild:
  x86 stable, bug #287697

  12 Oct 2009; Jonathan Callen <abcd@gentoo.org> -kbugbuster-3.5.9.ebuild:
  KDE 3.5.9 removal

  10 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  kbugbuster-4.3.1.ebuild:
  amd64 stable wrt #287697

  08 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org> -kbugbuster-4.3.0.ebuild:
  Drop KDE 4.3.0

*kbugbuster-4.3.2 (06 Oct 2009)

  06 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org> +kbugbuster-4.3.2.ebuild:
  Version bump

*kbugbuster-4.3.1 (01 Sep 2009)

  01 Sep 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  +kbugbuster-4.3.1.ebuild:
  Version bump

*kbugbuster-4.3.0 (03 Aug 2009)

  03 Aug 2009; Alex Alexander <wired@gentoo.org> +kbugbuster-4.3.0.ebuild:
  Version bump

  12 Jul 2009; Raúl Porcel <armin76@gentoo.org> kbugbuster-3.5.10.ebuild:
  alpha/sparc stable wrt #271889

  23 Jun 2009; Jeroen Roovers <jer@gentoo.org> kbugbuster-3.5.10.ebuild:
  Stable for HPPA (bug #271889).

  14 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org> -kbugbuster-4.2.3.ebuild:
  Drop KDE 4.2.3

  06 Jun 2009; Markus Meier <maekke@gentoo.org> kbugbuster-3.5.10.ebuild:
  amd64/x86 stable, bug #271889

  04 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org> kbugbuster-4.2.4.ebuild:
  Fix accidently added keywords

*kbugbuster-4.2.4 (04 Jun 2009)

  04 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org> +kbugbuster-4.2.4.ebuild:
  Version bump

  03 Jun 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking kbugbuster-3.5.10 ppc64 stable for bug 271889

  03 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org> -kbugbuster-4.2.2.ebuild:
  Drop KDE 4.2.2

  31 May 2009; nixnut <nixnut@gentoo.org> kbugbuster-3.5.10.ebuild:
  ppc stable #271889

*kbugbuster-4.2.3 (06 May 2009)
