@@ -1,0 +1,17 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kbugbuster/kbugbuster-4.3.3.ebuild,v 1.1 2009/11/02 20:41:14 wired Exp $
+
+EAPI="2"
+
+KMNAME="kdesdk"
+inherit kde4-meta
+
+DESCRIPTION="KBugBuster - A tool for checking and reporting KDE apps' bugs"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~x86"
+IUSE="debug +handbook"
+
+DEPEND="
+	$(add_kdebase_dep kdepimlibs)
+"
+RDEPEND="${DEPEND}"
