@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kbugbuster
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kbugbuster/ChangeLog,v 1.119 2009/10/18 17:06:12 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kbugbuster/ChangeLog,v 1.120 2009/11/02 20:41:14 wired Exp $
+
+*kbugbuster-4.3.3 (02 Nov 2009)
+
+  02 Nov 2009; Alex Alexander <wired@gentoo.org> +kbugbuster-4.3.3.ebuild:
+  Version bump
 
   18 Oct 2009; Markus Meier <maekke@gentoo.org> kbugbuster-4.3.1.ebuild:
   x86 stable, bug #287697
